<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id" translatable="false">1299783663749043</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1299783663749043</string>
    <string name="app_name" translatable="false">MyTrainer</string>
    <string name="insert_password">Insert password</string>
    <string name="insert_email">Insert email</string>
    <string name="login">Login</string>
    <string name="text_choice_athlete">Be a real athlete! You want to be able to reach your goals, personalize your experience and have a direct contact with your trainer?</string>
    <string name="text_choice_trainer">Start a new experience like a real trainer! With this app you will be able to make a program for your athlete, choosing above over 150 exercises.</string>
    <string name="sign_in_trainer">Join now as trainer</string>
    <string name="sign_in_athlete">Join now as athlete</string>
    <string name="bodyweight_trainer">Bodyweight</string>
    <string name="crossfit_trainer">Crossfit</string>
    <string name="functional_trainer">Functional</string>
    <string name="wellness_trainer">Wellness</string>
    <string name="powerlifting_trainer">Powerlifting</string>
    <string name="calisthenics_trainer">Calisthenics</string>
    <string name="yoga_trainer">Yoga</string>
    <string name="mixed_martial_arts_trainer">Mixed martial arts</string>
    <string name="bodybuilding_trainer">Bodybuilding</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_surname">Insert surname</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="insert_gym_trainer">Enter reference gym</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_surname">Invalid surname</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Need 8 char, 1 upper, 1 special, 1 num.</string>
    <string name="frag_1_registration_athlete_name">PERSONAL DATA</string>
    <string name="frag_2_registration_athlete_name">GENERAL INFO</string>
    <string name="frag_3_registration_athlete_name">EXTRA INFO</string>
    <string name="frag_1_registration_trainer_name">PERSONAL DATA</string>
    <string name="frag_2_registration_trainer_name">EXTRA INFO</string>
    <string name="info_specialization_trainer">Select one specialization!</string>
    <string name="optional_field">*Optional</string>
    <string name="tab_user_choice_athlete">ATHLETE</string>
    <string name="tab_user_choice_trainer">TRAINER</string>
    <string name="registration_success_toast">REGISTRATION COMPLETED, WELCOME! ;]</string>
    <string name="registration_error_toast">ONE OR MORE FIELD ARE UNCORRECTED. RETRY! :[</string>
    <string name="body_Info_athlete">Body info</string>
    <string name="insert_height_athlete">Height</string>
    <string name="insert_weight_athlete">Weight</string>
    <string name="choice_type_of_workout_athlete">Choice type of workout</string>
    <string name="selects_your_goals_athlete">Select your goal</string>
    <string name="fat_loss">Fat loss</string>
    <string name="gain_muscle">Gain muscle</string>
    <string name="athletic_preparation">Athletic preparation</string>
    <string name="self_defence">Self defence</string>
    <string name="reduce_stress">Reduce stress</string>
    <string name="endurance">Endurance</string>
    <string name="invalid_height">Invalid height</string>
    <string name="invalid_weight">Invalid weight</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="fields_not_correct">Fields not correct</string>
    <string name="weight_workout_registration_athlete">Weight workout</string>
    <string name="bodyweight_workout_registration_athlete">Bodyweight workout</string>
    <string name="level_athlete">What is your level?</string>
    <string name="beginner_athlete">Beginner</string>
    <string name="veteran_athlete">Veteran</string>
    <string name="number_of_workout_for_week_athlete">Number of workout for week</string>
    <string name="equipment_available_athlete">Equipment available?</string>
    <string name="dumbbells_athlete">Dumbbells</string>
    <string name="rope_athlete">Ropes</string>
    <string name="rack_athlete">Rack</string>
    <string name="benches_athlete">Bench</string>
    <string name="pull_up_bar_athlete">Pull-up bar</string>
    <string name="dip_station_athlete">Dip station</string>
    <string name="gym_membership_athlete">Gym membership</string>
    <string name="barbell_and_discs_athlete">Barbell and discs</string>
    <string name="intermediate_athlete">Intermediate</string>
    <string name="advanced_athlete">Advanced</string>
    <string name="error_toast_equipment_athlete">ERROR: Select at least one type of equipment.</string>
    <string name="first_select_date">First select date</string>
    <string name="error_invalid_date">Date must be between 2010 – 1920</string>
    <string name="error_creation_user_auth">CREATION OF THE USER FAILED, RETRY!</string>
    <string name="error_login_user_not_found">ERROR: USER NOT FOUND OR NOT REGISTERED.</string>
    <string name="welcome_back_trainer_login">WELCOME BACK TRAINER!</string>
    <string name="welcome_back_athlete_login">WELCOME BACK ATHLETE!</string>
    <string name="string_welcome_main" translatable="false">Train like there\'s no\ntomorrow!</string>
    <string name="home" translatable="false">Home</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Logout</string>
    <string name="birth_profile">Date of birth:</string>
    <string name="gym_profile">Gym:</string>
    <string name="specialization">Specialization:</string>
    <string name="change_image">TAKE A PICTURE</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_text">"Are you sure to delete the whole account? This operation is not reversible! "</string>
    <string name="cancel_button" tools:ignore="ButtonCase">CANCEL</string>
    <string name="accept_button">ACCEPT</string>
    <string name="type_of_workout_profile_athlete">Type of workout:</string>
    <string name="goal_profile_athlete">Goal:</string>
    <string name="level_profile_athlete">Level:</string>
    <string name="equipment_profile_athlete">Available equipment:</string>
    <string name="error_edit_profile_athlete">ERROR: HEIGHT, WEIGHT OR EQUIPMENT NOT VALID. UPDATE FAILED.</string>
    <string name="height_profile_athlete">Height:</string>
    <string name="weight_profile_athlete">Weight:</string>
    <string name="number_of_workout_profile_athlete">Number of workout:</string>
    <string name="no_schedule_athlete">There\'s no schedule for you at the moment!</string>
    <string name="try_to_refresh_schedule_athlete">Try to refresh the page clicking the button down below!</string>
    <string name="keep_pushing_schedule_athlete" translatable="false">Keep pushing!</string>
    <string name="schedule_fetch_athlete">Active schedule:</string>
    <string name="series_schedule_athlete">Series</string>
    <string name="recovery_schedule_athlete">Recovery</string>
    <string name="start_timer_schedule_athlete">START\nTIMER</string>
    <string name="create_account_login">CREATE ACCOUNT</string>
    <string name="delete_account_button">DELETE ACCOUNT</string>
    <string name="reinsert_password_to_confirm_delete_of_account">Reinsert the password to confirm delete of account</string>
    <string name="athlete">Athlete</string>
    <string name="trainer" translatable="false">Trainer</string>
    <string name="view_schedule">Schedule</string>
    <string name="no_schedule_available">THERE\'S NO SCHEDULE AVAILABLE FOR YOU, RETRY LATER!</string>
    <string name="not_valid_password">NOT VALID PASSWORD</string>
    <string name="exercise">Exercises</string>
    <string name="finish">Finished</string>
    <string name="no_athlete_list_client">THERE\'S NO ATHLETE REGISTERED YET!</string>
    <string name="type_workout">Type of workout</string>
    <string name="explain_insert_dialog_type_workout">Insert the type of workout (leg, chest, exc..)</string>
    <string name="invalid_type_workout">Cannot create a schedule without specify the type of workout!</string>
    <string name="creation_schedule">Creation schedule</string>
    <string name="exercise_name">Exercise name</string>
    <string name="active_schedule">Active schedule:</string>
    <string name="take_photo_from_gallery">PICK FROM THE GALLERY</string>
    <string name="save_day">Save day</string>
    <string name="no_athlete_registered">There\'s no athlete registered at the moment</string>
    <string name="registered_athlete">Registered athlete</string>
    <string name="search_exercise_title">Search the exercise!</string>
    <string name="search_exercise">Insert the exercise to search</string>
    <string name="search_calves">Calves</string>
    <string name="search_shoulders">Shoulders</string>
    <string name="search_abdominals">Abdominals</string>
    <string name="search_triceps">Triceps</string>
    <string name="search_biceps">Biceps</string>
    <string name="search_legs">Legs</string>
    <string name="search_chest">Chest</string>
    <string name="info_checkbox_filter_muscle">Filter in base of the needed muscle group!</string>
    <string name="search_back">Back</string>
    <string name="search_cardio" translatable="false">Cardio</string>
    <string name="no_filter">No filter</string>
    <string name="search_exercises_bar">Search exercises</string>
    <string name="no_connection">NO INTERNET CONNECTION, RETRY LATER</string>
    <string name="id_trainer_mismatch">The operations are not enabled, another trainer is following this athlete!</string>
    <string name="dialog_cancel_day_schedule">Are you sure to delete this day? This operation is not reversible!</string>
    <string name="title_cancel_day_schedule">Delete schedule day</string>
    <string name="succesfully_day_remove">has been removed!</string>
    <string name="viewcase_title_search_exercise_filter">Filter</string>
    <string name="viewcase_text_search_exercise_filter">Type here to use filter.\nEnjoy!</string>
    <string name="viewcase_titlekeyboard_search_exercise_filter">Keyboard filter</string>
    <string name="viewcase_textkeyboard_search_exercise_filter">Type here to\nfilter in base of\nexercise name!</string>
    <string name="viewcase_title_fab_fragment_list_client">Refresh button</string>
    <string name="viewcase_text_fab_fragment_list_client">Press here to\nrefresh the list!</string>
    <string name="viewcase_title_recycle_fragment_list_client">List\nsubmitted client</string>
    <string name="viewcase_text_recycle_fragment_list_client">Click here to\nsearch above all\nregistered athletes!</string>
    <string name="viewcase_title_fab_fragment_creation_exercises">Search button</string>
    <string name="viewcase_text_fab_fragment_creation_exercise">Use this button\nto search between\nover 100 exercise!</string>
    <string name="viewcase_text_save_activity_creation_schedule">Use that button\nto save this day and\nadd it to the schedule!</string>
    <string name="viewcase_title_save_activity_creation_schedule">Save button</string>
    <string name="viewcase_title_fab_delete_activity_creation_schedule">Delete button</string>
    <string name="viewcase_title_fab_add_activity_creation_schedule">Add button</string>
    <string name="viewcase_text_fab_add_activity_creation_schedule">Use this button\nto add another\nexercise to this day!</string>
    <string name="viewcase_title_menu_activity_home_trainer" translatable="false">Menu</string>
    <string name="viewcase_text_menu_activity_home_trainer">Press on this\nmenu to manage\nthe log-out and\nthe delete of\nthe account</string>
    <string name="viewcase_title_recycle_fragment_schedule_athlete">Schedule</string>
</resources>